--- a/Arena/Prediction/notebooks/predictor_train.ipynb
+++ b/Arena/Prediction/notebooks/predictor_train.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64838942b35040e8a3f535db5164a071",
+       "model_id": "f25f80f1784f4c36916115b0e648732a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,13 +250,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69369465dd6f4c97882c724bb7a92881",
+       "model_id": "56f706c55ac5410c81b22cef7919a515",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,9 +399,9 @@
      "output_type": "stream",
      "text": [
       "Sample size:\n",
-      "Training: 159 trials, 4568 seqs\n",
-      "Validation: 32 trials, 1023 seqs\n",
-      "Test: 32 trials, 142276 seqs\n"
+      "Training: 159 trials, 4971 seqs\n",
+      "Validation: 32 trials, 594 seqs\n",
+      "Test: 32 trials, 136944 seqs\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,15 +446,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training model RNN_GRU_1024-1838_i20_o10_h350_l1_RealExtreme:\n",
+      "Training model RNN_GRU_1119-1004_i20_o10_h350_l1_RealExtreme:\n",
       "\n",
-      "### Eval epoch: 0, Test set mean ADE: 200.910, mean FDE: 342.743 BEST\n",
-      "Epoch: 0, avg loss: 193.223, epoch time: 0.174\n",
-      "### Eval epoch: 5, Test set mean ADE: 190.348, mean FDE: 327.180 BEST\n",
-      "Epoch: 5, avg loss: 180.081, epoch time: 0.214\n",
-      "### Eval epoch: 10, Test set mean ADE: 173.469, mean FDE: 295.455 BEST\n",
-      "Epoch: 10, avg loss: 163.111, epoch time: 0.173\n",
-      "Interrupted\n"
+      "CUDA error: out of memory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/app/Pogona_realtime/Arena/Prediction/traj_models.py\", line 189, in train_model\n",
+      "    results=results,\n",
+      "  File \"/app/Pogona_realtime/Arena/Prediction/train_eval.py\", line 483, in train_trajectory_model\n",
+      "    model.to(device)\n",
+      "  File \"/home/user/miniconda/envs/py37/lib/python3.7/site-packages/torch/nn/modules/module.py\", line 607, in to\n",
+      "    return self._apply(convert)\n",
+      "  File \"/home/user/miniconda/envs/py37/lib/python3.7/site-packages/torch/nn/modules/module.py\", line 354, in _apply\n",
+      "    module._apply(fn)\n",
+      "  File \"/home/user/miniconda/envs/py37/lib/python3.7/site-packages/torch/nn/modules/rnn.py\", line 154, in _apply\n",
+      "    ret = super(RNNBase, self)._apply(fn)\n",
+      "  File \"/home/user/miniconda/envs/py37/lib/python3.7/site-packages/torch/nn/modules/module.py\", line 376, in _apply\n",
+      "    param_applied = fn(param)\n",
+      "  File \"/home/user/miniconda/envs/py37/lib/python3.7/site-packages/torch/nn/modules/module.py\", line 605, in convert\n",
+      "    return t.to(device, dtype if t.is_floating_point() else None, non_blocking)\n",
+      "RuntimeError: CUDA error: out of memory\n"
      ]
     }
    ],
