--- a/Arena/Prediction/notebooks/yolo_eval.ipynb
+++ b/Arena/Prediction/notebooks/yolo_eval.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "<module 'Prediction.train_eval' from '/app/Pogona_realtime/Arena/Prediction/train_eval.py'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,19 +81,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80f46b8c63824671ac77d3c444788f95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=233), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "110 trials loaded\n"
+      "\n",
+      "211 trials loaded\n"
      ]
     }
    ],
    "source": [
-    "all_df = dataset.collect_data(data_sources={'detections': True, 'timestamps': True, 'dlc': False, 'touches': True})"
+    "all_df = dataset.collect_data(data_sources={'detections': True, 'timestamps': True, 'touches': True, 'bug_trajectory': True})"
    ]
   },
   {
@@ -296,17 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detector initiated successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "det = detector.Detector_v4(conf_thres=0.8, nms_thres=0.5)"
    ]
@@ -1570,9 +1577,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py37]",
+   "display_name": "Python [conda env:py36] *",
    "language": "python",
-   "name": "conda-env-py37-py"
+   "name": "conda-env-py36-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1584,7 +1591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
