--- a/notebooks/pose_estimation_charuco.ipynb
+++ b/notebooks/pose_estimation_charuco.ipynb
@@ -222,41 +222,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-163.9418438095452, -22.23992068509273, 0.4697094703064225)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cv2.RQDecomp3x3(cv2.Rodrigues(rvec)[0])[0])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "outputs": [
     {
      "data": {
-      "text/plain": "[array([[[878.3358 , 639.8867 ],\n         [902.1783 , 641.36786],\n         [900.30133, 663.5542 ],\n         [876.62225, 662.4133 ]]], dtype=float32),\n array([[[840.4332 , 599.0931 ],\n         [864.4827 , 600.5726 ],\n         [863.0918 , 623.41833],\n         [839.2575 , 622.1183 ]]], dtype=float32),\n array([[[883.3948 , 561.34467],\n         [907.69415, 562.72723],\n         [906.16425, 586.3241 ],\n         [881.88635, 585.2416 ]]], dtype=float32),\n array([[[844.3426 , 518.52576],\n         [869.1139 , 519.90393],\n         [867.6727 , 544.0564 ],\n         [843.2614 , 542.7189 ]]], dtype=float32),\n array([[[887.641  , 479.60394],\n         [912.42914, 480.7684 ],\n         [911.20087, 505.34445],\n         [886.5512 , 504.35303]]], dtype=float32),\n array([[[722.6676 , 472.04892],\n         [746.86774, 473.1063 ],\n         [746.2793 , 497.4435 ],\n         [722.2977 , 496.24146]]], dtype=float32),\n array([[[847.6583 , 435.99442],\n         [872.72595, 437.29187],\n         [871.6051 , 462.072  ],\n         [846.66235, 460.7062 ]]], dtype=float32),\n array([[[606.2733 , 427.60846],\n         [628.8309 , 428.1622 ],\n         [628.3121 , 452.0922 ],\n         [605.69604, 451.29358]]], dtype=float32),\n array([[[891.34033, 395.86646],\n         [916.36346, 397.3453 ],\n         [915.1966 , 422.21725],\n         [890.37494, 420.94815]]], dtype=float32),\n array([[[850.6027 , 352.0442 ],\n         [875.78894, 353.29486],\n         [875.02264, 378.21277],\n         [849.72614, 377.18457]]], dtype=float32),\n array([[[766.97455, 349.6044 ],\n         [791.8313 , 350.31393],\n         [791.1353 , 374.98032],\n         [766.41425, 374.3415 ]]], dtype=float32),\n array([[[593.43176, 212.02121],\n         [538.59186, 216.31229],\n         [539.6769 , 162.92366],\n         [594.2244 , 157.76889]]], dtype=float32),\n array([[[1011.5623 ,  210.77484],\n         [ 951.6739 ,  209.52728],\n         [ 948.50073,  154.20029],\n         [1007.9024 ,  155.52771]]], dtype=float32),\n array([[[292.72284, 708.1217 ],\n         [315.47067, 712.9855 ],\n         [315.69598, 741.4369 ],\n         [294.43625, 737.6845 ]]], dtype=float32),\n array([[[798.3897 , 635.3513 ],\n         [822.2044 , 636.75726],\n         [820.9577 , 659.3126 ],\n         [797.4667 , 657.67255]]], dtype=float32),\n array([[[719.6203 , 629.83514],\n         [742.5092 , 631.6729 ],\n         [742.1897 , 653.91   ],\n         [719.2364 , 652.23596]]], dtype=float32),\n array([[[642.86945, 624.19696],\n         [665.37524, 625.97534],\n         [665.2341 , 648.13666],\n         [643.1221 , 645.8802 ]]], dtype=float32),\n array([[[759.7119 , 594.3374 ],\n         [783.66064, 595.6061 ],\n         [782.7556 , 618.5675 ],\n         [759.23004, 617.33484]]], dtype=float32),\n array([[[681.3276, 588.9982],\n         [704.2791, 590.5784],\n         [703.7049, 613.4372],\n         [680.8145, 611.5942]]], dtype=float32),\n array([[[605.58594, 583.68787],\n         [627.5692 , 585.274  ],\n         [627.49036, 607.76996],\n         [605.74524, 605.85144]]], dtype=float32),\n array([[[801.59296, 556.9408 ],\n         [825.928  , 558.54443],\n         [824.5791 , 582.11255],\n         [800.61   , 580.4539 ]]], dtype=float32),\n array([[[720.7165, 552.5562],\n         [744.5499, 553.9646],\n         [744.0247, 577.3808],\n         [720.523 , 575.8895]]], dtype=float32),\n array([[[642.81573, 547.8644 ],\n         [665.5882 , 549.16254],\n         [665.45514, 572.3038 ],\n         [642.90784, 570.53314]]], dtype=float32),\n array([[[762.2626 , 514.4861 ],\n         [786.5224 , 515.73065],\n         [785.5371 , 539.64703],\n         [761.5111 , 538.3989 ]]], dtype=float32),\n array([[[682.148  , 510.50504],\n         [705.5263 , 511.62564],\n         [704.9109 , 535.5048 ],\n         [681.74023, 534.03143]]], dtype=float32),\n array([[[605.44086, 506.55136],\n         [627.605  , 507.63364],\n         [627.46954, 530.99664],\n         [605.3689 , 529.4962 ]]], dtype=float32),\n array([[[804.64825, 475.5566 ],\n         [829.423  , 476.7795 ],\n         [828.4232 , 501.1806 ],\n         [803.7746 , 500.00433]]], dtype=float32),\n array([[[643.625  , 468.7344 ],\n         [666.625  , 469.60144],\n         [666.4196 , 493.4826 ],\n         [643.471  , 492.4009 ]]], dtype=float32),\n array([[[764.64197, 432.58624],\n         [789.4143 , 433.56506],\n         [788.4115 , 458.2123 ],\n         [763.8679 , 457.17017]]], dtype=float32),\n array([[[683.7577 , 429.66296],\n         [707.4851 , 430.4892 ],\n         [706.74164, 454.75107],\n         [683.10297, 453.90244]]], dtype=float32),\n array([[[807.53467, 392.47372],\n         [832.39954, 393.5004 ],\n         [831.39935, 418.39163],\n         [806.6708 , 417.27487]]], dtype=float32),\n array([[[724.8031 , 389.7593 ],\n         [749.2971 , 390.58582],\n         [748.4796 , 415.25027],\n         [724.38245, 414.39963]]], dtype=float32),\n array([[[644.96875, 388.34872],\n         [668.3862 , 388.67294],\n         [668.035  , 412.81042],\n         [644.685  , 412.23868]]], dtype=float32),\n array([[[685.3002 , 348.3485 ],\n         [709.3713 , 348.4527 ],\n         [708.7017 , 372.70062],\n         [684.73517, 372.37732]]], dtype=float32),\n array([[[607.806  , 347.84735],\n         [630.3831 , 347.90216],\n         [629.77795, 371.69574],\n         [607.3483 , 371.45605]]], dtype=float32)]"
+      "text/plain": "(544, 728, 3)"
      },
-     "execution_count": 26,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corners"
+    "cv2.resize(img, None, fx=0.5, fy=0.5).shape"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "544.0"
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1088 / 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "728.0"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1456 / 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
