--- a/notebooks/pose_estimation_charuco.ipynb
+++ b/notebooks/pose_estimation_charuco.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -188,7 +191,10 @@
     "    print(f'Missing markers IDs: {x[~np.isin(x, ids)].tolist()}')\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -217,7 +223,10 @@
     "  distCoeffs=None)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
@@ -307,7 +316,10 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   }
  ],
