--- a/notebooks/paper_figs.ipynb
+++ b/notebooks/paper_figs.ipynb
@@ -2,15 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "f12b5601-b5a4-4ae9-9a74-477c9336d48b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-25T16:24:05.312557416Z",
-     "start_time": "2023-09-25T16:24:02.844534701Z"
+     "end_time": "2023-11-02T12:22:20.841846277Z",
+     "start_time": "2023-11-02T12:22:19.168341834Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of db_models failed: Traceback (most recent call last):\n",
+      "  File \"/home/regev/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 273, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/regev/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 496, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "  File \"/home/regev/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 393, in update_generic\n",
+      "    update(a, b)\n",
+      "  File \"/home/regev/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 331, in update_class\n",
+      "    if (old_obj == new_obj) is True:\n",
+      "  File \"/home/regev/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/sqlalchemy/sql/operators.py\", line 366, in __eq__\n",
+      "    return self.operate(eq, other)\n",
+      "  File \"/home/regev/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/sqlalchemy/orm/attributes.py\", line 317, in operate\n",
+      "    return op(self.comparator, *other, **kwargs)\n",
+      "  File \"/home/regev/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/sqlalchemy/orm/relationships.py\", line 1296, in __eq__\n",
+      "    raise sa_exc.InvalidRequestError(\n",
+      "sqlalchemy.exc.InvalidRequestError: Can't compare a collection to an object or collection; use contains() to test for membership.\n",
+      "]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -44,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "7aeef318-96cf-43d5-b9ac-e514a60be5aa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-25T16:24:07.613947978Z",
-     "start_time": "2023-09-25T16:24:07.509544025Z"
+     "end_time": "2023-11-02T12:22:20.994761886Z",
+     "start_time": "2023-11-02T12:22:20.729766282Z"
     }
    },
    "outputs": [],
@@ -62,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "9a81f857-43ef-4f4d-a5cc-be6ba2afaa8f",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2023-09-25T16:24:09.540699943Z",
-     "start_time": "2023-09-25T16:24:08.747148445Z"
+     "end_time": "2023-11-02T12:22:21.500592165Z",
+     "start_time": "2023-11-02T12:22:20.856710087Z"
     }
    },
    "outputs": [
@@ -77,7 +109,7 @@
       "text/plain": "   strike_id                    time animal_id  miss_distance  pred_distance  \\\n0       3093 2023-05-24 10:00:54.573      PV42      45.607017       0.779532   \n1       3094 2023-05-24 10:04:03.744      PV42      77.103826       0.320173   \n2        107 2023-04-22 10:01:32.224      PV85      33.955854       0.249356   \n3        108 2023-04-22 10:04:15.172      PV85      19.235384       0.173923   \n4        110 2023-04-22 10:05:10.516      PV85      43.416587       0.443417   \n\n           movement_type  calc_speed  bug_size  proj_bug_x  is_hit  trial_id  \\\n0                jump_up    4.140111       163       -68.0    True     11947   \n1                jump_up    4.046848       143       -60.0    True     11954   \n2  random_low_horizontal    2.100104       165       -22.0    True      6414   \n3  random_low_horizontal    2.085246       163       -28.0    True      6420   \n4  random_low_horizontal    2.066818       146       -26.0    True      6349   \n\n   block_id arena_name        day  proj_strike_x  proj_strike_y  day_num  \n0      1572  msi-regev 2023-05-24          -36.0          -28.0     26.0  \n1      1572  msi-regev 2023-05-24          -77.0           -4.0     26.0  \n2      1031  msi-regev 2023-04-22          -33.0           -8.0      4.0  \n3      1031  msi-regev 2023-04-22          -19.0           -3.0      4.0  \n4      1031  msi-regev 2023-04-22          -38.0          -21.0      4.0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>strike_id</th>\n      <th>time</th>\n      <th>animal_id</th>\n      <th>miss_distance</th>\n      <th>pred_distance</th>\n      <th>movement_type</th>\n      <th>calc_speed</th>\n      <th>bug_size</th>\n      <th>proj_bug_x</th>\n      <th>is_hit</th>\n      <th>trial_id</th>\n      <th>block_id</th>\n      <th>arena_name</th>\n      <th>day</th>\n      <th>proj_strike_x</th>\n      <th>proj_strike_y</th>\n      <th>day_num</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3093</td>\n      <td>2023-05-24 10:00:54.573</td>\n      <td>PV42</td>\n      <td>45.607017</td>\n      <td>0.779532</td>\n      <td>jump_up</td>\n      <td>4.140111</td>\n      <td>163</td>\n      <td>-68.0</td>\n      <td>True</td>\n      <td>11947</td>\n      <td>1572</td>\n      <td>msi-regev</td>\n      <td>2023-05-24</td>\n      <td>-36.0</td>\n      <td>-28.0</td>\n      <td>26.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3094</td>\n      <td>2023-05-24 10:04:03.744</td>\n      <td>PV42</td>\n      <td>77.103826</td>\n      <td>0.320173</td>\n      <td>jump_up</td>\n      <td>4.046848</td>\n      <td>143</td>\n      <td>-60.0</td>\n      <td>True</td>\n      <td>11954</td>\n      <td>1572</td>\n      <td>msi-regev</td>\n      <td>2023-05-24</td>\n      <td>-77.0</td>\n      <td>-4.0</td>\n      <td>26.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>107</td>\n      <td>2023-04-22 10:01:32.224</td>\n      <td>PV85</td>\n      <td>33.955854</td>\n      <td>0.249356</td>\n      <td>random_low_horizontal</td>\n      <td>2.100104</td>\n      <td>165</td>\n      <td>-22.0</td>\n      <td>True</td>\n      <td>6414</td>\n      <td>1031</td>\n      <td>msi-regev</td>\n      <td>2023-04-22</td>\n      <td>-33.0</td>\n      <td>-8.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>108</td>\n      <td>2023-04-22 10:04:15.172</td>\n      <td>PV85</td>\n      <td>19.235384</td>\n      <td>0.173923</td>\n      <td>random_low_horizontal</td>\n      <td>2.085246</td>\n      <td>163</td>\n      <td>-28.0</td>\n      <td>True</td>\n      <td>6420</td>\n      <td>1031</td>\n      <td>msi-regev</td>\n      <td>2023-04-22</td>\n      <td>-19.0</td>\n      <td>-3.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>110</td>\n      <td>2023-04-22 10:05:10.516</td>\n      <td>PV85</td>\n      <td>43.416587</td>\n      <td>0.443417</td>\n      <td>random_low_horizontal</td>\n      <td>2.066818</td>\n      <td>146</td>\n      <td>-26.0</td>\n      <td>True</td>\n      <td>6349</td>\n      <td>1031</td>\n      <td>msi-regev</td>\n      <td>2023-04-22</td>\n      <td>-38.0</td>\n      <td>-21.0</td>\n      <td>4.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +150,31 @@
     "df = analyze_db_data()\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['PV148', 'PV42', 'PV43', 'PV80', 'PV82', 'PV85', 'PV91', 'PV95',\n       'PV97', 'PV99'], dtype='<U5')"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(sorted(df.animal_id.unique()))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-02T12:24:39.039028472Z",
+     "start_time": "2023-11-02T12:24:38.692048404Z"
+    }
+   },
+   "id": "288c9a9d491adc7f"
   },
   {
    "cell_type": "code",
