--- a/notebooks/arena_paper.ipynb
+++ b/notebooks/arena_paper.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-27T09:02:27.342585177Z",
-     "start_time": "2023-11-27T09:02:26.288821930Z"
+     "end_time": "2023-11-27T13:13:03.563196340Z",
+     "start_time": "2023-11-27T13:13:02.393136560Z"
     }
    },
    "outputs": [],
@@ -548,11 +548,9 @@
    "source": [
     "from analysis.predictors.tongue_out import TongueTrainer\n",
     "\n",
-    "\n",
-    "# tt = TongueTrainer(model_path='/data/Pogona_Pursuit/output/models/tongue_out/20230518_145847')\n",
-    "# # tt.load()\n",
-    "# fig, axes = plt.subplots(1, 3, figsize=(18, 4))\n",
-    "# tt.all_data_evaluation(axes)\n",
+    "tt = TongueTrainer(model_path='/data/Pogona_Pursuit/output/models/tongue_out/20230518_145847')\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(18, 4))\n",
+    "tt.all_data_evaluation(axes)\n",
     "fig.savefig(f'../notebooks/arena_figures/tongue_model_evaluation.pdf', dpi=250)"
    ],
    "metadata": {
@@ -758,41 +756,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQLAlchemy==2.0.20\r\n",
+      "sqlalchemy-schemadisplay==1.3\r\n",
+      "SQLAlchemy-Utils==0.38.3\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip freeze | grep -i sql"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T13:36:58.572770742Z",
+     "start_time": "2023-11-27T13:36:58.137639346Z"
+    }
    },
    "id": "13fa9d0cf212a099"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "reflect() missing 1 required positional argument: 'bind'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[6], line 5\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msqlalchemy_schemadisplay\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m create_schema_graph\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m# create the pydot graph object by autoloading all tables via a bound metadata object\u001B[39;00m\n\u001B[0;32m----> 5\u001B[0m graph \u001B[38;5;241m=\u001B[39m \u001B[43mcreate_schema_graph\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmetadata\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mMetaData\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43mf\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mpostgres://\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mconfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdb_user\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m:\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mconfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdb_password\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m@\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mconfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdb_host\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m:\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mconfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdb_port\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m/\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43mconfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdb_name\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      6\u001B[0m \u001B[43m    \u001B[49m\u001B[43mshow_datatypes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;66;43;03m# The image would get nasty big if we'd show the datatypes\u001B[39;49;00m\n\u001B[1;32m      7\u001B[0m \u001B[43m    \u001B[49m\u001B[43mshow_indexes\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;66;43;03m# ditto for indexes\u001B[39;49;00m\n\u001B[1;32m      8\u001B[0m \u001B[43m    \u001B[49m\u001B[43mrankdir\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mLR\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;66;43;03m# From left to right (instead of top to bottom)\u001B[39;49;00m\n\u001B[1;32m      9\u001B[0m \u001B[43m    \u001B[49m\u001B[43mconcentrate\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;66;43;03m# Don't try to join the relation lines together\u001B[39;49;00m\n\u001B[1;32m     10\u001B[0m \u001B[43m)\u001B[49m\n\u001B[1;32m     11\u001B[0m graph\u001B[38;5;241m.\u001B[39mwrite_png(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdbschema.png\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;66;03m# write out the file\u001B[39;00m\n",
+      "File \u001B[0;32m~/anaconda3/envs/Pogona_Pursuit/lib/python3.8/site-packages/sqlalchemy_schemadisplay.py:144\u001B[0m, in \u001B[0;36mcreate_schema_graph\u001B[0;34m(tables, metadata, show_indexes, show_datatypes, font, concentrate, relation_options, rankdir)\u001B[0m\n\u001B[1;32m    142\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m tables \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m metadata \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m    143\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(metadata\u001B[38;5;241m.\u001B[39mtables):\n\u001B[0;32m--> 144\u001B[0m         \u001B[43mmetadata\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreflect\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    145\u001B[0m     tables \u001B[38;5;241m=\u001B[39m metadata\u001B[38;5;241m.\u001B[39mtables\u001B[38;5;241m.\u001B[39mvalues()\n\u001B[1;32m    146\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n",
+      "\u001B[0;31mTypeError\u001B[0m: reflect() missing 1 required positional argument: 'bind'"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import MetaData\n",
+    "from sqlalchemy_schemadisplay import create_schema_graph\n",
+    "\n",
+    "# create the pydot graph object by autoloading all tables via a bound metadata object\n",
+    "graph = create_schema_graph(metadata=MetaData(f'postgres://{config.db_user}:{config.db_password}@{config.db_host}:{config.db_port}/{config.db_name}'),\n",
+    "    show_datatypes=False, # The image would get nasty big if we'd show the datatypes\n",
+    "    show_indexes=False, # ditto for indexes\n",
+    "    rankdir='LR', # From left to right (instead of top to bottom)\n",
+    "    concentrate=False # Don't try to join the relation lines together\n",
+    ")\n",
+    "graph.write_png('dbschema.png') # write out the file"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T13:13:59.894141209Z",
+     "start_time": "2023-11-27T13:13:59.704221516Z"
+    }
    },
    "id": "b810629ed8263fd"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
-   "source": [],
+   "source": [
+    "!pip freeze | grep -i graph"
+   ],
    "metadata": {
-    "collapsed": false
-   },
-   "id": "eae98b09a4e4c563"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T13:20:50.713091504Z",
+     "start_time": "2023-11-27T13:20:50.278432055Z"
+    }
    },
    "id": "33b1d65bab8b7ec8"
   },
