--- a/notebooks/arena_paper.ipynb
+++ b/notebooks/arena_paper.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
@@ -569,7 +569,7 @@
     "    # ax.set_title(str(trial_id))\n",
     "    ax.set_ylabel('')\n",
     "    ax.set_xlabel('Time [sec]')\n",
-    "    fig.savefig(f'../notebooks/arena_figures/jump_example_{trial_id}.pdf', dpi=250)\n",
+    "    fig.savefig(f'../notebooks/arena_figures/jump_example_{trial_id}.pdf', dpi=250, bbox_inches=\"tight\")\n",
     "    \n",
     "\n",
     "# good trials: [5964, 1787, 2006, 1840]\n",
@@ -578,8 +578,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-26T15:18:01.509175069Z",
-     "start_time": "2023-11-26T15:17:49.201954426Z"
+     "end_time": "2023-11-28T16:43:40.260586510Z",
+     "start_time": "2023-11-28T16:43:39.730953419Z"
     }
    },
    "id": "25bd87be9467ab7c"
