--- a/notebooks/arena_paper.ipynb
+++ b/notebooks/arena_paper.ipynb
@@ -216,28 +216,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "outputs": [
     {
      "data": {
-      "text/plain": "333"
+      "text/plain": "53.88787014484406"
      },
-     "execution_count": 40,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(rdf_.vid_name.unique())"
+    "i = 1\n",
+    "h._children[0]._coordinates[0, i+1, 0] - h._children[0]._coordinates[0, i, 0] "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-06T10:00:01.850798640Z",
-     "start_time": "2023-12-06T10:00:01.690324898Z"
+     "end_time": "2023-12-06T13:28:47.391648891Z",
+     "start_time": "2023-12-06T13:28:47.187372177Z"
     }
    },
-   "id": "4e76a3cc52634b70"
+   "id": "d09189a177a45cde"
   },
   {
    "cell_type": "markdown",
